# configuration-manager-td

./: README.md  configuration_manager.tox  pyproject.toml
python/: callbacks.py  configuration_controller.py  download_trigger.py
src/: __init__.py
src/configuration_manager_td/: __init__.py  configuration_controller.py  configuration_manager.tox
